welcome.lessons.welcome.bat.bool1.Diff21.scala.error
diff21:2: error: not found: value a
	if ( a<=21) {
             ^diff21:3: error: not found: value a
		return Math.abs(21-a);
                                   ^diff21:5: error: not found: value a
		return 2*Math.abs(21-a);
                                     ^