welcome.lessons.welcome.bat.bool1.Diff21.scala.code
def diff21(n:Int): Int = {
	if ( a<=21) {
		return Math.abs(21-a);
	} else {
		return 2*Math.abs(21-a);
	}
}
